--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -1,12 +1,9 @@
-body{
-    background-color: green;
-    .hello{
-        color:red;
-    }
-}
+body
+    background-color green
+    .hello
+        color red
 
-.greet{
+.greet
     width 500px
     height 500px
     background-color red
-}
