--- a/src/html/index.template.pug
+++ b/src/html/index.template.pug
@@ -9,9 +9,6 @@ html
     title ReactJS
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css')
   body
-      #app
+      #root
         <!-- #{time} -->
-      //- script(src=`//cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react${min}.js`)
-      //- script(src=`//cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom${min}.js`)
-      //- script(src=`//cdnjs.cloudflare.com/ajax/libs/react-router/4.0.0-beta.7/react-router${min}.js`)
-
+        
