--- a/src/html/index.template.pug
+++ b/src/html/index.template.pug
@@ -1,6 +1,6 @@
 - var devMode = self.htmlWebpackPlugin.options.data.DEV_MODE
-- function date_now_format() { var date = new Date(); return date.getFullYear() + "_" + ( date.getMonth() + 1 ) + "_" + date.getDate() + "_" + date.getHours() + "_" + date.getMinutes() + "_" + date.getSeconds();     }
-- var time = date_now_format();
+- function dateNowFormat() { var date = new Date(); return date.getFullYear() + "_" + ( date.getMonth() + 1 ) + "_" + date.getDate() + "_" + date.getHours() + "_" + date.getMinutes() + "_" + date.getSeconds();     }
+- var time = dateNowFormat();
 - var min = devMode ? "" : ".min"
 doctype
 html
