fiex hbs template webpack preloaders

--- a/script/generator/component/es6.js.hbs
+++ b/script/generator/component/es6.js.hbs
@@ -15,7 +15,7 @@ class {{ properCase this.name }} extends Component {
   }
 }
 
-{{ properCase name }}.proptTypes = {
+{{ properCase name }}.propTypes = {
 
 };
 
