--- a/script/generator/component/stateless.js.hbs
+++ b/script/generator/component/stateless.js.hbs
@@ -10,7 +10,7 @@ const {{ properCase name }} = () => (
   <div className="{{dashCase name}}-root">
   </div>
 );
-{{ properCase name }}.proptTypes = {
+{{ properCase name }}.propTypes = {
 
 };
 export default {{ properCase name }};
