--- a/script/generator/component/stateless.js.hbs
+++ b/script/generator/component/stateless.js.hbs
@@ -1,16 +1,20 @@
 /**
 * {{ properCase name }}
 */
-
 import React from 'react';
 // import PropTypes from 'prop-types';
+
 import './index.styl';
 
-const {{ properCase name }} = () => (
+const {{ properCase name }} = ({}) => (
   <div className="{{dashCase name}}-root">
+    <h1>{{ properCase this.name }}</h1>
   </div>
 );
-{{ properCase name }}.propTypes = {
 
+{{ properCase name }}.propTypes = {
 };
+{{ properCase name }}.defaultProps = {
+};
+
 export default {{ properCase name }};
