--- a/script/generator/component/es6.js.hbs
+++ b/script/generator/component/es6.js.hbs
@@ -5,7 +5,7 @@
 import React, { Component } from 'react';
 // import PropTypes from 'prop-types';
 
-import './index.styl';
+import './{{ properCase name }}.styl';
 
 class {{ properCase this.name }} extends Component { 
   componentDidMount(){
