--- a/script/generator/component/stateless.js.hbs
+++ b/script/generator/component/stateless.js.hbs
@@ -4,7 +4,7 @@
 import React from 'react';
 // import PropTypes from 'prop-types';
 
-import './index.styl';
+import './{{ properCase name }}.styl';
 
 const {{ properCase name }} = ({}) => (
   <div className="{{dashCase name}}-root">
