complete react ssr

--- a/src/js/component/App/App.styl
+++ b/src/js/component/App/App.styl
@@ -1,9 +1,2 @@
-body
-  background-color green
-  .hello
-    color red
-
-.greet
-  width 500px
-  height 500px
-  background-color red
+h1
+  font-size 80px
