--- a/src/js/component/Navigation/Navigation.styl
+++ b/src/js/component/Navigation/Navigation.styl
@@ -1,6 +1,8 @@
 .navigation_root
-  background-color red
-
+  background-color #c3c3c3
   a
+    font-size 80px
+    text-decoration: none
+    color black
     &.active
       color white
