--- a/src/html/index.template.pug
+++ b/src/html/index.template.pug
@@ -7,6 +7,7 @@ html
   head
     meta(charset='UTF-8')
     title ReactJS
+    script(src="//cdnjs.cloudflare.com/ajax/libs/device.js/0.2.7/device.min.js")
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css')
   body
       #root
