--- a/src/js/component/About/About.styl
+++ b/src/js/component/About/About.styl
@@ -1,2 +1,16 @@
-.about-root
+.device-info-root
+  .row
+    margin-top: .5rem
   // width 100%
+.device
+  &__item
+    &.true
+      .inner
+        color white
+        padding 5px
+        border-radius: 3px
+        background-color #338a3e
+        // shadow()
+
+    label
+      font-size 1.5rem
