--- a/src/html/index.template.pug
+++ b/src/html/index.template.pug
@@ -8,8 +8,10 @@ html
     meta(charset='UTF-8')
     title ReactJS
     script(src="//cdnjs.cloudflare.com/ajax/libs/device.js/0.2.7/device.min.js")
-    link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css')
+    link(rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto")
+    link(rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css')
+    link(rel="stylesheet" href="//unpkg.com/basscss@8.0.2/css/basscss.min.css" )
   body
-      #root
-      <!-- #{time} -->
+    #root
+    <!-- #{time} -->
         
