--- a/src/js/component/App/App.styl
+++ b/src/js/component/App/App.styl
@@ -1,2 +1,22 @@
+*
+  font-family: 'Roboto', sans-serif;
 h1
   font-size 80px
+
+.fade-enter {
+  opacity: 0.01;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.fade-exit {
+  opacity: 1;
+}
+
+.fade-exit.fade-exit-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in;
+}
