--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -18,3 +18,4 @@ html
     meta(property="og:type" content="website")
   body
     #app
+    //- script(src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Object.values,Object.assign|always" defer)
