webpack  mini-css-extract-plugin

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -1,8 +1,8 @@
 - var devMode = self.htmlWebpackPlugin.options.data.DEV_MODE
-- var title = "title";
-- var description = ""
+- var title = "React Template";
+- var description = "React Template"
 - var keywords = "";
-- var image = "img/fb.jpg"
+- var image = "asset/img/fb.jpg"
 doctype html
 html
   head
@@ -16,6 +16,11 @@ html
     meta(property="og:site_name" content=title)
     meta(property="og:description" content=description)
     meta(property="og:type" content="website")
+    link(rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli:400,300")
+    link(rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat")
+    link(rel="stylesheet" href="https://milkmidi.github.io/core-ui-material-design/css/core-ui-custom.min.css")
+    link(rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css")
+    link(rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
   body
     #app
     //- script(src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Object.values,Object.assign|always" defer)
