--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -2,7 +2,7 @@
 html
   -webkit-font-smoothing: antialiased
   font-family Arial, "微軟正黑體", sans-serif
-html, body, #app, main
+html, body, #app, main, section
   width 100%
   height 100%
 main
