add GetUserMedia Example

--- a/src/js/component/GetUserMedia/GetUserMedia.styl
+++ b/src/js/component/GetUserMedia/GetUserMedia.styl
@@ -1,8 +1,6 @@
 .get-user-media-root
   position relative
-  canvas
-    position absolute
-    top 0
-    left 0
+  video, canvas
     width 100%
-    height 100%
+    height auto
+  
