--- a/src/js/component/Navigation/Navigation.styl
+++ b/src/js/component/Navigation/Navigation.styl
@@ -1,3 +1,25 @@
 nav
-  a
+  background-color lighten(#3a3a3a, 0%)
+  position fixed
+  padding 30px
+  height 100%
+  box-shadow 0 10px 30px -12px rgba(0,0,0,.42), 0 4px 25px 0 rgba(0,0,0,.12), 0 8px 10px -5px rgba(0,0,0,.2);
+  z-index 99
+  transition all 0.35s ease-in-out
+  transform translateX(-100%)
+  &.show
+    transform translateX(0)
+  .close-btn
+    cursor pointer
+    display block
+    padding 10px
+    position absolute
+    right 0px
+    top 0
+    color white !important
+    font-size 40px
+    background-color #3a3a3a
+    transform translateX(98%)
+    text-decoration: none
+  a.btn
     display block
