add Device Component

--- a/internal/generator/component/index.js.hbs
+++ b/internal/generator/component/index.js.hbs
@@ -1,1 +1,10 @@
-export { default } from './{{ properCase name }}'
+{{#if wantLoadable}}
+import Loadable from 'react-loadable';
+
+export default Loadable({
+  loader: () => import(/* webpackChunkName: "{{ properCase name }}" */'./{{ properCase name }}.jsx'),
+  loading: () => null,
+});
+{{else}}
+export { default } from './{{ properCase name }}.jsx';
+{{/if}}
