--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -26,3 +26,4 @@ html
       script(src=weinreScript)
   body
     #app
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/device.js/0.2.7/device.min.js" defer)
