--- a/src/js/component/InlineVideo/InlineVideo.styl
+++ b/src/js/component/InlineVideo/InlineVideo.styl
@@ -1,4 +1,9 @@
 .inline-video
-  video
+  .col
+    border 1px solid alpha(black, 0.4)
+  h3
+    font-size 1rem
+    text-align center
+  video, canvas
     width 100%
-    height auto
+    height 300px
