--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -26,4 +26,6 @@ html
       script(src=weinreScript)
   body
     #app
+    #modal-root
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenMax.min.js" defer)
     script(src="https://cdnjs.cloudflare.com/ajax/libs/device.js/0.2.7/device.min.js" defer)
